refactor(UserService, LocaleHelper, TestFixtures): enhance exception handling and code organization
- Updated UserService to throw IllegalArgumentException instead of SafeIllegalArgumentException for password validation.
- Improved import organization in UserService and LocaleHelper for better readability.
- Adjusted UserServiceTest to reflect the change in exception type.
- Added suppression warnings in TestFixtures to clarify intent and reduce PMD violations.
- Refactored UserDetailViewTest to use a constant for method invocation, improving maintainability.